--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.7",
     "daisyui": "^2.24.0",
     "next": "12.2.2",
     "next-auth": "^4.10.0",
