--- a/package.json
+++ b/package.json
@@ -9,22 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tailwindcss/typography": "^0.5.7",
-    "daisyui": "^2.24.0",
-    "next": "12.2.2",
-    "next-auth": "^4.10.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "@tailwindcss/typography": "^0.5.8",
+    "daisyui": "^2.42.1",
+    "next": "^13.0.6",
+    "next-auth": "^4.18.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/node": "18.0.6",
-    "@types/react": "18.0.15",
-    "@types/react-dom": "18.0.6",
-    "autoprefixer": "^10.4.7",
-    "eslint": "8.20.0",
-    "eslint-config-next": "12.2.2",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.6",
-    "typescript": "4.7.4"
+    "@types/node": "^18.11.12",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
+    "autoprefixer": "^10.4.13",
+    "eslint": "^8.29.0",
+    "eslint-config-next": "^13.0.6",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4",
+    "typescript": "^4.9.4",
+    "yarn-upgrade-all": "^0.7.1"
   }
 }
