--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "@types/node": "^18.11.12",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
@@ -24,6 +25,7 @@
     "eslint": "^8.29.0",
     "eslint-config-next": "^13.0.6",
     "postcss": "^8.4.19",
+    "prettier": "^2.8.1",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.4",
     "yarn-upgrade-all": "^0.7.1"
