--- a/package.json
+++ b/package.json
@@ -9,25 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tailwindcss/typography": "^0.5.8",
-    "daisyui": "^2.42.1",
-    "next": "^13.0.6",
-    "next-auth": "^4.20.1",
+    "@tailwindcss/typography": "^0.5.9",
+    "classnames": "^2.3.2",
+    "daisyui": "^3.2.1",
+    "next": "^13.4.9",
+    "next-auth": "^4.22.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@trivago/prettier-plugin-sort-imports": "^4.0.0",
-    "@types/node": "^18.11.12",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
-    "autoprefixer": "^10.4.13",
-    "eslint": "^8.29.0",
-    "eslint-config-next": "^13.0.6",
-    "postcss": "^8.4.19",
-    "prettier": "^2.8.1",
-    "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.4",
-    "yarn-upgrade-all": "^0.7.1"
+    "@trivago/prettier-plugin-sort-imports": "^4.1.1",
+    "@types/node": "^20.4.2",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.44.0",
+    "eslint-config-next": "^13.4.9",
+    "postcss": "^8.4.26",
+    "prettier": "^3.0.0",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.1.6",
+    "yarn-upgrade-all": "^0.7.2"
   }
 }
