--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tailwindcss/typography": "^0.5.9",
     "classnames": "^2.3.2",
     "daisyui": "^3.2.1",
+    "lodash": "^4.17.21",
     "next": "^13.4.9",
     "next-auth": "^4.22.1",
     "react": "^18.2.0",
@@ -20,6 +21,7 @@
   "devDependencies": {
     "@svgr/webpack": "^8.0.1",
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
+    "@types/lodash": "^4.14.195",
     "@types/node": "^20.4.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
