--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "@tailwindcss/typography": "^0.5.9",
     "classnames": "^2.3.2",
     "daisyui": "^3.2.1",
