chore: remove unused packages; update prettier sort plugin

--- a/.prettierrc
+++ b/.prettierrc
@@ -3,6 +3,10 @@
   "useTabs": false,
   "printWidth": 100,
   "singleQuote": true,
-  "importOrder": ["^@components/(.*)$", "^[./]", "^[../]"],
+  "importOrder": [
+    "^@components/(.*)$",
+    "^[./]",
+    "^[../]"
+  ],
   "importOrderSeparation": true
 }
