--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@svgr/webpack": "^8.0.1",
-    "@trivago/prettier-plugin-sort-imports": "^4.1.1",
+    "@trivago/prettier-plugin-sort-imports": "^4.2.0",
     "@types/lodash": "^4.14.195",
     "@types/node": "^20.4.2",
     "@types/react": "^18.2.15",
@@ -32,7 +31,6 @@
     "postcss": "^8.4.26",
     "prettier": "^3.0.0",
     "tailwindcss": "^3.3.3",
-    "typescript": "^5.1.6",
-    "yarn-upgrade-all": "^0.7.2"
+    "typescript": "^5.1.6"
   }
 }
