--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.17.1",
     "@tailwindcss/typography": "^0.5.10",
     "classnames": "^2.5.1",
     "lodash": "^4.17.21",
     "next": "^14.1.0",
     "next-auth": "^4.24.6",
+    "openai": "^4.28.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
