--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.10",
+    "@xenova/transformers": "^2.16.1",
     "classnames": "^2.5.1",
     "lodash": "^4.17.21",
     "next": "^14.1.0",
