--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.3",
     "@tailwindcss/typography": "^0.5.13",
     "classnames": "^2.5.1",
     "lodash": "^4.17.21",
