--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "^14.2.3",
     "next-auth": "^4.24.7",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.5",
