--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/google": "^0.0.26",
+    "@ai-sdk/openai": "^0.0.36",
     "@heroicons/react": "^2.1.3",
     "@tailwindcss/typography": "^0.5.13",
+    "ai": "^3.2.22",
     "classnames": "^2.5.1",
     "lodash": "^4.17.21",
     "next": "^14.2.3",
