chrome: update env example

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,12 @@
-NEXTAUTH_SECRET="demo"
+# NextAuth
+NEXTAUTH_SECRET='use [openssl rand -hex 32] to generate a 32 bytes value'
+
+# Google OAuth
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
+
+# Google Gemini API Key
+GOOGLE_GENERATIVE_AI_API_KEY=
+
+# OpenAI
+OPENAI_API_KEY=
