refactor: move nav menu into shared layout component to prevent blinking when navigating

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ NEXTAUTH_SECRET='use [openssl rand -hex 32] to generate a 32 bytes value'
 # Google OAuth
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
+GOOGLE_OAUTH_SCOPE=
 
 # Google Gemini API Key
 GOOGLE_GENERATIVE_AI_API_KEY=
