chore: update prettier config

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,12 +1,6 @@
 {
   "tabWidth": 2,
   "useTabs": false,
-  "printWidth": 100,
-  "singleQuote": true,
-  "importOrder": [
-    "^@components/(.*)$",
-    "^[./]",
-    "^[../]"
-  ],
-  "importOrderSeparation": true
+  "printWidth": 80,
+  "singleQuote": true
 }
