--- a/package.json
+++ b/package.json
@@ -9,15 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ai-sdk/google": "^0.0.26",
-    "@ai-sdk/openai": "^0.0.36",
     "@heroicons/react": "^2.1.3",
     "@tailwindcss/typography": "^0.5.13",
-    "ai": "^3.2.22",
     "classnames": "^2.5.1",
+    "dayjs": "^1.11.11",
     "lodash": "^4.17.21",
     "next": "^14.2.3",
     "next-auth": "^4.24.7",
+    "openai": "^4.52.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-toastify": "^10.0.5"
